--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,6 +27,9 @@ jobs:
         uses: actions/checkout@v3
         with:
             lfs: true
+      - # https://github.com/actions/checkout/issues/270
+        name: Check out LFS objects
+        run: git lfs pull
       -
         name: Login to registry
         if: github.event_name != 'pull_request'
